--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <a href="https://www.facebook.com/Lvedens/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/lvdens_xvi/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
     
-    <p class="w3-medium">Powered by <a href="##" target="_blank" class="w3-hover-text-green"></a>© Levi / Lvdens  </p>
+    <p class="w3-medium">Powered by <a href="https://www.facebook.com/Lvedens/" target="_blank" class="w3-hover-text-green"></a>© Levi / Lvdens  </p>
   <!-- End footer -->
   </footer>
 
