--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>My name is Levi Coc, I am 20 year old. I'm mainly know as Lvdens or Levy, something I do enjoy doing is listening to music on Spotify,
        other sorts of hobbies I love is Volleyball, sort of play video games, watch intresting movies; but most of all I love Web Development.
     </p>
+    <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h3 class="w3-padding-16 w3-text-light-grey">What I Do</h3>
+    <hr style="width:200px" class="w3-opacity">
     <div class="container">
     <div class="row">
         <div class="col-md-6-lg-3 text-center text-white">
