--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>Maya Mopan, Stann Creek, Belize </p>
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +501 635-8643</p>
-      <p><a href="levicoc35@gmail.com"><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Email: levicoc35@gmail.com</a></p>
+      <p><a href="mailto:levicoc35@gmail.com"><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Email: levicoc35@gmail.com</a></p>
     </div><br>
     <!--<p>Let's get in touch. Send me a message:</p>
 
