--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About me Lvdens</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>My name is Levi Coc, I am 20 year old. I'm mainly know as Lvdens or Levy, something I do enjoy doing is listening to music on Spotify,
-       other sorts of hobbies I love is Volleyball, sort of play video games, watch intresting movies; but most of all I love Web Development.
+    <p>My name is Levi Coc, I am 20 year old. I'm mainly know as Lvdens or Levy on Discord and Gaming, something I do enjoy is listening to music on Spotify,
+       love playing Volleyball thats my only favorite sport, sort of play video games now a days, watch intresting movies; but most of all I love Designing Websites.
     </p>
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h3 class="w3-padding-16 w3-text-light-grey">What I Do</h3>
@@ -83,7 +83,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="col-md-6 col-lg-3 text-center text-white">
             <div class="mx-auto service-box mt-5"><i class="fa fa-file-video-o fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="200" data-aos-once="true"></i>
                 <h3 class="mb-3">Video Editor</h3>
-                <p class="text-muted mb-0">I create AMV's (Animated Music Videos) from different anime's as a content creator.</p>
+                <p class="text-muted mb-0">I create AMV's (Animated Music Videos) from different anime's as a content creator but I havent publish any yet.</p>
             </div>
         </div>
         <div class="col-md-6 col-lg-3 text-center text-white">
