--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small"> </span> Lvdens </h1>
-    <p>Web Designer.</p>
+    <p>Welcome to my Profile.</p>
     <img src="wall11.jpg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
@@ -77,21 +77,28 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="col-md-6-lg-3 text-center text-white">
             <div class="mx-auto service-box mt-5"><i class="fa fa-file-code-o fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-once="true"></i>
                 <h3 class="mb-3">Programmer</h3>
-                        <p class="text-muted mb-0">I work in fields ranging from web development to software development and systems security</p>
+                        <p class="text-muted mb-0">I work in fields ranging from web development to software development and systems security (ง︡'-'︠)ง.</p>
             </div>
         </div>
         <div class="col-md-6 col-lg-3 text-center text-white">
             <div class="mx-auto service-box mt-5"><i class="fa fa-file-video-o fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="200" data-aos-once="true"></i>
                 <h3 class="mb-3">Video Editor</h3>
-                <p class="text-muted mb-0">I create AMV's (Animated Music Videos) from different anime's as a content creator but I havent publish any yet.</p>
+                <p class="text-muted mb-0">I create AMV's (Animated Music Videos) from different anime's as a content creator but I havent publish any yet (─‿‿─).</p>
             </div>
         </div>
         <div class="col-md-6 col-lg-3 text-center text-white">
             <div class="mx-auto service-box mt-5"><i class="fa fa-book fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="400" data-aos-once="true"></i>
                 <h3 class="mb-3">Novelist</h3>
-                <p class="text-muted mb-0">I'm the author of Infinite Possibilities, and write on platforms like Webnovel, Inkitt and Wattpad.</p>
+                <p class="text-muted mb-0">I write on platforms like Webnovel, Inkitt and Wattpad, reason why I write, well I just want to 
+                  improve my write skills （★￣∀￣★）.</p>
             </div>
         </div>
+      <div class="col-md-6 col-lg-3 text-center text-white">
+          <div class="mx-auto service-box mt-5"><i class="fa fa-camera fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="400" data-aos-once="true"></i>
+              <h3 class="mb-3">Photography</h3>
+              <p class="text-muted mb-0">When comes to Photography I'm Average (>‿◠)✌ </p>
+          </div>
+      </div>
     <!--<p class="w3-wide">Photography</p>
     <div class="w3-white">
       <div class="w3-dark-grey" style="height:28px;width:95%"></div>
