--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-    <h2 class="w3-text-light-grey">About me Lvdens</h2>
+    <h2 class="w3-text-light-grey">About Me</h2>
     <hr style="width:200px" class="w3-opacity">
     <p>My name is Levi Coc, I am 20 year old. I'm mainly know as Lvdens or Levy on Discord and Gaming, something I do enjoy is listening to music on Spotify,
-       love playing Volleyball thats my only favorite sport, sort of play video games now a days, watch intresting movies; but most of all I love Designing Websites.
+       love playing Volleyball thats my only favorite sport, sort of play video games now a days, love watch anime; but most of all I love Designing Websites.
     </p>
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h3 class="w3-padding-16 w3-text-light-grey">What I Do</h3>
@@ -96,7 +96,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="col-md-6 col-lg-3 text-center text-white">
           <div class="mx-auto service-box mt-5"><i class="fa fa-camera fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="400" data-aos-once="true"></i>
               <h3 class="mb-3">Photography</h3>
-              <p class="text-muted mb-0">When comes to Photography I'm Average (>‿◠)✌ </p>
+              <p class="text-muted mb-0">When comes to Photography I'm Average (>‿◠) </p>
           </div>
       </div>
     <!--<p class="w3-wide">Photography</p>
@@ -226,7 +226,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
-     <!-- <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>-->
+     <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
       <p>
         <button class="w3-button w3-light-grey w3-padding-large" type="submit">
           <a href="mailto:levicoc35@gmail.com"><i class="fa fa-paper-plane"></i> SEND MESSAGE</a>
