--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Lvdens</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="https://i.postimg.cc/Mp943phj/Levi.jpg" style="border-radius: 50%" type="image/png">
+<link rel="icon" href="https://i.postimg.cc/m28B836R/Lc.jpg" style="border-radius: 50%" type="image/png">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -59,7 +59,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small"> </span> Lvdens </h1>
     <p>Welcome to my Profile.</p>
-    <img src="wall11.jpg" alt="boy" class="w3-image" width="992" height="1108">
+    <img src="Mc.jpg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
