--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="zuko1.gif" style="width:100%">
+  <img src="Lc.jpg" style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -57,7 +57,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small"> </span> Lvdens </h1>
+    <h1 class="w3-jumbo"><span class="w3-hide-small"> </span> Jxdn </h1>
     <p>Welcome to my Profile.</p>
     <img src="Mc.jpg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
@@ -66,8 +66,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About Me</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>My name is Levi Coc, I am 20 year old. I'm mainly know as Lvdens or Levy on Discord and Gaming, something I do enjoy is listening to music on Spotify,
-       love playing Volleyball thats my only favorite sport, sort of play video games now a days, love watch anime; but most of all I love Designing Websites.
+    <p>Hello, My name is Levi Coc, I am 20 year old. I'm mainly know as Lvdens or Jxdn on Discord and Gaming, I spent most of my time on Discord 24/7 (Think I need a life) and coding in Python and C++ Language, I'm currently unemployed at the moment due to school ('ㅅ') ~ Welp ~. My favorite things to do is listening to music on Spotify,
+      love playing Volleyball thats my only favorite sport to be honest, sort of play video games now a days, watching Animated movie 𓁏; and love Desiging Websites just like this one that I created, at this point I'm making a Blog mainly on how to create basic HTML Pages and learning how to code in C++ and Python Languages,
+      further more in the future my goal is to make tutorials on things that are main use in the work field. ||   So Welcome Friends to my Website ┗(＾∀＾)┛. 
     </p>
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h3 class="w3-padding-16 w3-text-light-grey">What I Do</h3>
@@ -217,8 +218,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>Maya Mopan, Stann Creek, Belize </p>
-      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +501 635-8643</p>
-      <p><a href="mailto:levicoc35@gmail.com"><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Email: levicoc35@gmail.com</a></p>
+      <p><a href="https://wa.link/ybn5av"><i class="fa fa-whatsapp fa-fw w3-text-white w3-xxlarge w3-margin-right" aria-hidden="true"></i>WhatsApp: 635-8643</p>
+      <p><a href="mailto:jxdn736@gmail.com"><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Email: jxdn736@gmail.com</a></p>
     </div><br>
     <p>Let's get in touch. Send me a message:</p>
 
@@ -240,8 +241,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <a href="https://www.facebook.com/Lvedens/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/lvdens_xvi/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <a href="https://wa.link/ybn5av"><i class="fa fa-whatsapp w3-hover-opacity"></i></a>
     
-    <p class="w3-medium">Powered by <a href="https://www.facebook.com/Lvedens/" target="_blank" class="w3-hover-text-green"></a>© Levi / Lvdens  </p>
+    <p class="w3-medium">Powered by <a href="https://www.facebook.com/Lvedens/" target="_blank" class="w3-hover-text-green"></a>© Levi Coc  </p>
   <!-- End footer -->
   </footer>
 
