--- a/resume.html
+++ b/resume.html
@@ -127,7 +127,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
   <a href="https://www.facebook.com/Lvedens/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-   <a href="https://www.instagram.com/lvdens_xvi/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+   <a href="https://www.instagram.com/jxdn_xvi/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
   <a href="https://wa.link/ybn5av"><i class="fa fa-whatsapp w3-hover-opacity"></i></a>
     <p class="w3-medium">Powered by <a href="##" target="_blank" class="w3-hover-text-green"></a>© Levi Coc  </p>
 
