--- a/resume.html
+++ b/resume.html
@@ -44,13 +44,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <p>Program in C++</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:90%">
               <div class="w3-center w3-text-white">90%</div>
             </div>
           </div>
           <p>Photography</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+            <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:80%">80%</div>
           </div>
           <br>
 
